Integrated RestTemplate for communication between services